force-app/main/default/objects/Service_Contract_Partner__c/Service_Contract_Partner__c.object-meta.xml
<CustomObject>
    <description>Object that represents the SAP Service Contract Partners</description>
    <label>Service Contract Partner</label>
    <nameField>
        <displayFormat>SCP-{00000}</displayFormat>
        <label>Service Contract Partner #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>