force-app/main/default/objects/Service_Contract_Partner__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>29622</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Contract Partners</relationshipLabel>
    <relationshipName>Service_Contract_Partners</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>