force-app/main/default/objects/Service_Contract_Partner__c/fields/Account_hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Account_hyperlink__c</fullName>
    <description>45560 Field for flow tables. If user does not have create access to object then column for lookups show the id and not the name</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Account__r.Id ,  Account__r.Name , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hyperlink formula to Account record</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>