force-app/main/default/objects/Service_Contract_Partner__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>45560 Field for flow table record sorting. If user does not have create access to object then column for lookups show the id and not the name. We wanted a hyperlink in the table but the sort still needed to be addressed</description>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>