force-app/main/default/objects/Service_Contract_Partner__c/fields/Partner_Function__c.field-meta.xml
<CustomField>
    <fullName>Partner_Function__c</fullName>
    <description>29622 direct integration. Formula to show user the common name in SF (e.g., Customer)</description>
    <inlineHelpText>Integrated value from SAP</inlineHelpText>
    <label>Partner Function</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>