force-app/main/default/objects/Service_Contract_Partner__c/fields/Project_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Project_Customer_Account__c</fullName>
    <description>29622. Critical to the Project creation flow which will query only</description>
    <formula>BEGINS(Partner_Function__c,&apos;SP&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluate true based on the Partner Function value starting with &apos;SP&apos;</inlineHelpText>
    <label>Project Customer Account</label>
    <type>Checkbox</type>
</CustomField>