force-app/main/default/objects/Service_Contract_Partner__c/fields/SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Number__c</fullName>
    <description>29622</description>
    <formula>IF( Account__r.SAP_Customer_Number__c &lt;&gt; &apos;&apos;,Account__r.SAP_Customer_Number__c,&apos;Missing Customer Number&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SAP Customer Number from related Account</inlineHelpText>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>